--- a/t09/style.css
+++ b/t09/style.css
@@ -1,7 +1,4 @@
-.main-container{
+.main-container {
     border: 2px solid grey;
-    padding: 20px;//////
-}
-.text-color{
-    color: darkgrey;
+    padding: 20px;
 }
