--- a/t06/style.css
+++ b/t06/style.css
@@ -4,7 +4,7 @@ h1 {
     background-color: red;
     color: white;
     text-align: center;
-    line-height: 4 0px;
+    line-height: 40px;
     padding-top: 30px;
     padding-bottom: 0px;
 }
